--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,14 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    - run: echo Setting up deno
+
     - name: Setup Deno environment
       uses: denolib/setup-deno@v2.0.0
+      with:
+        deno-version: v1.x
 
-    # Runs a set of commands using the runners shell
+    - run: echo Running tests
+
     - name: Run tests
       run: deno test
